tests/errors/this_not_method.moss
fn main() {
  println(this);
#         ^^^^ cannot use `this` in a function that is not a method
}
